# orca

./: .env  .gitignore  Cargo.toml  LICENSE.md  Makefile.toml  README.md  config.toml
.github/workflows/: rust.yml
coverage/: cobertura.xml
docker/: Dockerfile  docker-build.sh  docker-run.sh  git-tag.sh  list-sha.sh
src/: appstate.rs  authorized.rs  config.rs  hash.rs  lib.rs  main.rs  pattern.rs  routes.rs  templates.rs  tls.rs
src/calibre/: authors.rs  books.rs  books_authors_link.rs  books_languages_link.rs  books_plugin_data.rs  books_publishers_link.rs  books_ratings_link.rs  books_series_link.rs  books_tags_link.rs  comments.rs  conversion_options.rs  custom_columns.rs  data.rs  feeds.rs  identifiers.rs  languages.rs  last_read_positions.rs  library_id.rs  metadata_dirtied.rs  mod.rs  preferences.rs  prelude.rs  publishers.rs  ratings.rs  series.rs  tags.rs
templates/: authors.xml.tera  books.xml.tera  health.xml.tera  index.xml.tera  layout.xml.tera  opds.xml.tera  tags.xml.tera  template_error.xml.tera
tests/: cert.pem  invalid.pem  invalid_config.toml  key.pem  orca.http.test.toml  orca.https.test.toml  orca.test.toml  orca_test.rs
tests/calibre/: metadata.db  metadata_db_prefs_backup.json
tests/calibre/Alieksiei Nikolaievich Tolstoi/Gipierboloid inzhieniera Garina. Aelita (Khudozhnik G. Zubkovskii) (2)/: Gipierboloid inzhieniera Garina. Aelita (K - Alieksiei Nikolaievich Tolstoi.epub  metadata.opf
tests/calibre/Immanuel Kant/Kritik der reinen Vernunft - 2. Auflage (5)/: Kritik der reinen Vernunft - 2. Auflage - Immanuel Kant.epub  metadata.opf
tests/calibre/Lewis Carroll/Alice's Adventures in Wonderland (4)/: metadata.opf
