[package]
name = "orca"
version = "0.1.7"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "1.41.0"
actix-web = "4"
actix-files = "0.6"
env_logger = "0.11"
futures = "0.3"
base64 = "0.22"
toml = "0.8.19"
serde = "1.0.136"
serde_json = "1.0"
serde_derive = "1.0.136"
lazy_static = "1.5.0"
tera = "1.20.0"
rusqlite = { version = "0.32.1", features = ["bundled"] }
html2text = "0.13.3"
dirs = "5.0.1"
thiserror = "2.0"
clap = {version = "*", features = ["derive"]}
crypto-hash = "0.3.4"
rand = "0.8.5"
regex = "1.11.1"

[target.'cfg(unix)'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
