[package]
name = "orca"
version = "0.1.9"
edition = "2021"

[dependencies]
tokio = "1.41.0"
actix-web = "4"
actix-files = "0.6"
env_logger = "0.11"
futures = "0.3"
base64 = "0.22"
toml = "0.8.19"
serde = "1.0.136"
serde_json = "1.0"
serde_derive = "1.0.136"
lazy_static = "1.5.0"
tera = "1.20.0"
rusqlite = { version = "0.32.1", features = ["bundled"] }
html2text = "0.13.3"
dirs = "5.0.1"
thiserror = "2.0"
clap = {version = "*", features = ["derive"]}
crypto-hash = "0.3.4"
rand = "0.8.5"
regex = "1.11.1"
rust-embed = { version = "8.5.0", features = ["include-exclude"] }
once_cell = "1.20"

[target.'cfg(unix)'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[dev-dependencies]
assert_cmd = "2.0"
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
quick-xml = "0.37"
actix-http = "3.9"

[lib]
name = "orca"
path = "src/lib.rs"
