[package]
name = "orca"
version = "0.1.14"
edition = "2021"

[dependencies]
tokio = "1.49"
actix-web = { version = "4.12", features = ["rustls-0_23"]}
actix-files = "0.6"
base64 = "0.22"
toml = "0.9.11"
serde = "1.0.228"
serde_json = "1.0"
serde_derive = "1.0.228"
lazy_static = "1.5.0"
tera = "1.20.1"
rusqlite = { version = "0.38", features = ["bundled"] }
html2text = "0.16"
dirs = "6.0"
clap = {version = "*", features = ["derive"]}
rand = "0.9"
regex = "1.12.3"
rust-embed = { version = "8.11.0", features = ["include-exclude"] }
once_cell = "1.21"
rustls = "0.23.36"
rustls-pemfile = "2.2"
anyhow = "1.0.101"
argon2 = "0.5.3"

[target.'cfg(unix)'.dependencies]
openssl = { version = "0.10.75", features = ["vendored"] }

[dev-dependencies]
assert_cmd = "2.1"
reqwest = { version = "0.13", features = ["json", "blocking"] }
tokio = { version = "1.49", features = ["full"] }
quick-xml = "0.39"
actix-http = "3.11"
tempfile = "3.24"

[lib]
name = "orca"
path = "src/lib.rs"
